--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  amazon_cognito_identity_dart: "^0.0.19"
+  amazon_cognito_identity_dart_2: ^0.1.5+2
   shared_preferences: "^0.4.1"
   flutter_map: any
   user_location: any
